# swikv3

./: GraphView.py  LayoutManager.py  MuPDFRenderer.py  Page.py  README.md  Renderer.py  SwikGraphView.py  action.py  bunch.py  changestracker.py  coloreable.py  colorwidget.py  dialogs.py  dict_editor.py  finder.py  font_manager.py  groupbox.py  inspector.py  interfaces.py  keyboard_manager.py  manager.py  miniature_page.py  miniature_view.py  navigationtoolbar.py  page.py  paintable.py  progressing.py  pyproject.toml  radiob.py  rect.py  renderer.py  resizeable.py  resources.py  resources.qrc  rubberband.py  scene.py  searchtoolbar.py  selector.py  setup.py  signer.py  (+17 more)
annotations/: annotation.py  highlight_annotation.py  hyperlink.py  redactannotation.py  squareannotation.py
desktop/: swik.desktop
src/swik/: GraphView.py  LayoutManager.py  SwikGraphView.py  SwikItems.py  SyncDict.py  action.py  bunch.py  changes_tracker.py  changestracker.py  color_widget.py  coloreable.py  colorwidget.py  dialogs.py  file_browser.py  finder.py  font_manager.py  graphview.py  groupbox.py  inspector.py  interfaces.py  keyboard_manager.py  layout_manager.py  link_shower.py  long_press_button.py  magnifier.py  manager.py  miniature_page.py  miniature_view.py  page.py  paintable.py  progressing.py  rclone_browser.py  rect.py  renderer.py  resizeable.py  resources.py  resources.qrc  resources2.qrc  scene.py  selector.py  (+16 more)
src/swik/annotations/: annotation.py  highlight_annotation.py  hyperlink.py  redact_annotation.py  redactannotation.py  square_annotation.py
toolbars/: navigationtoolbar.py  searchtoolbar.py  zoom_toolbar.py
tools/: tool.py  tool_drag.py  tool_form.py  tool_insert_image.py  tool_mimic_pdf.py  tool_numerate.py  toolcrop.py  toolrearranger.py  toolredactannotation.py  toolsign.py  toolsquareannotation.py  tooltextselection.py
tools/replace_fonts/: repl_font.py  repl_fontnames.py  tool_replace_fonts.py
widgets/: pdf_widget.py
(+25 files in other folders)
